feat: add changing amount of cards

--- a/src/components/Tile/_tile.scss
+++ b/src/components/Tile/_tile.scss
@@ -1,8 +1,8 @@
-$tile-width: 120px;
-$tile-height: 200px;
+$tile-width: 150px;
+$tile-height: 250px;
 
 .tile {
-	margin: 10px 20px;
+	margin: 20px 20px;
 	border-radius: 5px;
 	border: 1px solid rgba(167, 167, 170, 0.4);
 	box-shadow: 8px 8px 1px 1px rgba(167, 167, 170, 0.4);
@@ -13,11 +13,12 @@ $tile-height: 200px;
 	img {
 		height: $tile-height - 30px;
 		width: $tile-width - 20px;
+		transition: 0.05s linear;
 	}
 	&.tile-closed {
 		background: rgb(241, 241, 198) none repeat scroll 0% 0%;
 		img {
-			display: none;
+			opacity: 0;
 		}
 	}
 }
