--- a/src/style.css
+++ b/src/style.css
@@ -11,17 +11,23 @@
 html {
   min-width: 300px;
   width: 100%;
-  height: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 body {
   width: 100%;
-  height: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 #root {
   width: 100%;
-  height: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,11 +36,23 @@ body {
           align-items: center;
 }
 
+.game-place {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .container {
   width: 100%;
-  height: -webkit-min-content;
-  height: -moz-min-content;
-  height: min-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -48,8 +66,30 @@ body {
           align-items: center;
 }
 
+.set-amount-block {
+  color: gray;
+  width: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 30px;
+  margin: 50px auto 30px;
+}
+
 .tile {
-  margin: 10px 20px;
+  margin: 20px 20px;
   border-radius: 5px;
   border: 1px solid rgba(167, 167, 170, 0.4);
   -webkit-box-shadow: 8px 8px 1px 1px rgba(167, 167, 170, 0.4);
@@ -60,8 +100,10 @@ body {
 }
 
 .tile img {
-  height: 170px;
-  width: 100px;
+  height: 220px;
+  width: 130px;
+  -webkit-transition: 0.05s linear;
+  transition: 0.05s linear;
 }
 
 .tile.tile-closed {
@@ -69,6 +111,6 @@ body {
 }
 
 .tile.tile-closed img {
-  display: none;
+  opacity: 0;
 }
 /*# sourceMappingURL=style.css.map */
