--- a/src/style.scss
+++ b/src/style.scss
@@ -9,28 +9,51 @@
 html {
 	min-width: 300px;
 	width: 100%;
-	height: 100%;
+	height: -webkit-max-content;
+	height: -moz-max-content;
+	height: max-content;
 }
 body {
 	width: 100%;
-	height: 100%;
+	height: -webkit-max-content;
+	height: -moz-max-content;
+	height: max-content;
 }
 #root {
 	width: 100%;
-	height: 100%;
+	height: -webkit-max-content;
+	height: -moz-max-content;
+	height: max-content;
 	display: flex;
 	align-items: center;
 }
+.game-place {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+}
 .container {
 	width: 100%;
-	height: -webkit-min-content;
-	height: -moz-min-content;
-	height: min-content;
+	height: -webkit-max-content;
+	height: -moz-max-content;
+	height: max-content;
+
 	display: flex;
 
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+}
+.set-amount-block {
+	color: gray;
+	width: 400px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	font-size: 30px;
+	margin: 50px auto 30px;
 }
 
 @import "components/Tile/tile";
