feat: add media quaery for 1000px

--- a/src/components/Tile/_tile.scss
+++ b/src/components/Tile/_tile.scss
@@ -7,18 +7,32 @@ $tile-height: 250px;
 	border: 1px solid rgba(167, 167, 170, 0.4);
 	box-shadow: 8px 8px 1px 1px rgba(167, 167, 170, 0.4);
 
+	height: $tile-height;
+	width: $tile-width;
+
 	text-align: center;
-	padding: 15px 5px;
+	align-items: center;
 	overflow: hidden;
 	img {
-		height: $tile-height - 30px;
-		width: $tile-width - 20px;
+		height: $tile-height - 10px;
+		width: $tile-width - 10px;
 		transition: 0.05s linear;
 	}
 	&.tile-closed {
 		background: rgb(241, 241, 198) none repeat scroll 0% 0%;
 		img {
 			opacity: 0;
+		}
+	}
+}
+
+@media (max-width: 1000px) {
+	.tile {
+		width: $tile-width - 30px;
+		height: $tile-height - 110px;
+		img {
+			width: $tile-width - 40px;
+			height: $tile-height - 120px;
 		}
 	}
 }
